--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,12 @@
  Changelog
 ===========
 
-1.0 (unreleased)
-================
+0.9.1 (2009-09-28)
+==================
 
-- Nothing changed yet.
+- Added `bootstrap.py` to ease the package setup.
+
+- Fixing brown bag release: only namespace packages were installed.
 
 
 0.9 (2009-09-28)
